fix window max size on mobile

--- a/src/client/stylesheets/core.css
+++ b/src/client/stylesheets/core.css
@@ -578,7 +578,7 @@ application-window[data-focused="false"] iframe {
     left : 0 !important;
     right : 0 !important;
     bottom : 0 !important;
-    top : 0 !important;
+    top : 40px !important;
   }
 
   application-window-button-maximize,
